refs #15699 例外処理のテスト修正/rescueの順番変更

--- a/public/404.html
+++ b/public/404.html
@@ -65,7 +65,7 @@
     <div class="dialog">
       <div>
         <h1>4 0 4</h1>
-        <p>Page　Not　Found</p>
+        <p class="error_description">Page　Not　Found</p>
       </div>
       <p>
         <a href="/">Back　to　Home.</a></br></br>
