--- a/public/500.html
+++ b/public/500.html
@@ -65,7 +65,7 @@
     <div class="dialog">
       <div>
         <h1>5 0 0</h1>
-        <p>Internal　Server　Error</p>
+        <p class="error_description">Internal　Server　Error</p>
       </div>
       <p>
         <a href="/">Back　to　Home.</a></br></br>
